--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 .idea/
 .ipynb_checkpoints/
-
+Human Strategy.pdf
+Human Strategy.tex
+Introduction.pdf
+Introduction.tex
+Matches and Tournaments.pdf
+Matches and Tournaments.tex
+Matches and Tournaments_files/
+Writing a Strategy.pdf
+Writing a Strategy.tex
