--- a/environment.yml
+++ b/environment.yml
@@ -6,4 +6,5 @@ dependencies:
     - axelrod==4.3.0
     - ipython==6.4.0
     - jupyter==1.0.0
+    - docopt
 prefix: /home/nikoleta/anaconda3/envs/game-python
