add nbval to yml

--- a/environment.yml
+++ b/environment.yml
@@ -7,4 +7,5 @@ dependencies:
     - ipython==6.4.0
     - jupyter==1.0.0
     - docopt
+    - nbval==0.9.0
 prefix: /home/nikoleta/anaconda3/envs/game-python
