--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,12 @@ name: game-python
 channels:
   - defaults
 dependencies:
-  - python=3.6
+  - python=3.9
+  - numpy=1.21
   - pip:
-    - axelrod==4.3.0
-    - ipython==6.4.0
-    - jupyter==1.0.0
+    - axelrod==4.14.0
+    - ipython==8.18.1
+    - jupyter==1.1.1
     - docopt
-    - nbval==0.9.6
+    - nbval==0.11.0
     - fsspec>=0.4.3
